@@ -80,7 +80,7 @@ my $navbar = <<'EOD';
 EOD
 my $address = <<'EOD';
 <address>
-    Last <a href="https://www.eyrie.org/~eagle/software/web/">spun</a>
+    Last <a href="https://www.eyrie.org/~eagle/software/docknot/">spun</a>
     %DATE% from thread modified %DATE%
 </address>
 EOD
