@@ -36,7 +36,7 @@
 </tr></table>
 
 <address>
-    Last <a href="https://www.eyrie.org/~eagle/software/web/">spun</a>
+    Last <a href="https://www.eyrie.org/~eagle/software/docknot/">spun</a>
     %DATE% from thread modified %DATE%
 </body>
 </html>
