@@ -82,7 +82,7 @@ Welcome.
 </p>
 
 <address>
-    Last <a href="https://www.eyrie.org/~eagle/software/web/">spun</a>
+    Last <a href="https://www.eyrie.org/~eagle/software/docknot/">spun</a>
     %DATE% from thread modified %DATE%
 </address>
 </body>
