@@ -379,7 +379,7 @@ Posted: %DATE% 00:09 &mdash; <span class="no-comment"><a href="/~eagle/faqs/comm
 </ol>
 
 <address>
-    Last <a href="https://www.eyrie.org/~eagle/software/web/">spun</a>
+    Last <a href="https://www.eyrie.org/~eagle/software/docknot/">spun</a>
     %DATE% from thread modified %DATE%
 </address>
 </body>
