@@ -800,7 +800,7 @@ Rating: 6 out of 10
     <a href="https://www.eyrie.org/~eagle/reviews/books/1-250-30112-2.html">Permanent link</a></p></div>
 
 <address>
-    Last <a href="https://www.eyrie.org/~eagle/software/web/">spun</a>
+    Last <a href="https://www.eyrie.org/~eagle/software/docknot/">spun</a>
     %DATE% from thread modified %DATE%
 </address>
 </body>
