@@ -66,7 +66,7 @@ Some text.  <strike>strike</strike><sub>2</sub>
   </ul>
 
 <address>
-    Last <a href="https://www.eyrie.org/~eagle/software/web/">spun</a>
+    Last <a href="https://www.eyrie.org/~eagle/software/docknot/">spun</a>
     %DATE% from thread modified %DATE%
 </address>
 </body>
