@@ -159,7 +159,7 @@ includes several interesting nuggets of mathematical history.
 <p class="reviewed">Reviewed: %DATE%</p></div></div>
 
 <address>
-    Last <a href="https://www.eyrie.org/~eagle/software/web/">spun</a>
+    Last <a href="https://www.eyrie.org/~eagle/software/docknot/">spun</a>
     %DATE% from thread modified %DATE%
 </address>
 </body>
