@@ -274,7 +274,7 @@ For complete copyright and license information, see the file
 </tr></table>
 
 <address>
-    Last <a href="https://www.eyrie.org/~eagle/software/web/">spun</a>
+    Last <a href="https://www.eyrie.org/~eagle/software/docknot/">spun</a>
     %DATE% from thread modified %DATE%
 </address>
 </body>
