@@ -17,6 +17,9 @@
 
  - Fix typo in README.md template for ExtUtils::MakeMaker packages.
 
+ - Fix the URL in the footer added by docknot spin to point to DocKnot
+   instead of my old web tools page.
+
 7.01 - 2022-01-19
 
  - Correctly handle Unicode output from commands run by pointers and from
